# pycbdetect

./: .gitignore  .gitognore  README_CN.md  README_EN.md  pyproject.toml  setup.py  smoke_test.py
pycbdetect/: board_helpers.py  boards_from_corners.py  config.py  filter_corners.py  find_corners.py  imgproc.py  meanshift.py  nms.py  polynomial_fit.py  score_corners.py  utils.py
pycbdetect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pycbdetect.py
