[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycbdetect"
version = "0.1.0"
description = "Pure-Python checkerboard / deltille pattern detection library"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "ftdlyc", email = "yclu.cn@gmail.com"},
]
keywords = ["checkerboard", "camera-calibration", "computer-vision", "deltille"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]
viz = [
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["pycbdetect*"]
